- Se modifica presentacion de video desde valores del panel de admin

--- a/admin/index.html
+++ b/admin/index.html
@@ -33,6 +33,8 @@
         <div class="file-list-section">
             <h2>Videos Existentes</h2>
             <ul id="fileList"></ul>
+            <!-- Botón para limpiar la caché -->
+            <button id="cleanCacheButton" class="clean-cache-button">Limpiar Caché</button>
         </div>
     </div>
 
